# epol_chess

./: .gitignore  CMakeLists.txt  README.md
include/: Board.hpp  Chess.hpp  ChessGame.hpp  ChessPlayer.hpp  ConsoleChessPlayer.hpp  ConsoleDisplay.hpp  ConsolePlayer.hpp  ConsolePuzzlePlayer.hpp  Figure.hpp  FigureBishop.hpp  FigureKing.hpp  FigureKnight.hpp  FigurePath.hpp  FigurePawn.hpp  FigureQueen.hpp  FigureRook.hpp  FigureSymbol.hpp  Figures.hpp  Game.hpp  GameLogic.hpp  IllegalMoveException.hpp  InitialChessBoardSetup.hpp  Move.hpp  NetworkPlayer.hpp  Player.hpp  Position.hpp  PositionFormat.hpp  Puzzle.hpp  PuzzleGame.hpp  PuzzleLogic.hpp  PuzzlePlayer.hpp
proto/: CMakeLists.txt  move.pb.h  move.proto
src/: Board.cpp  Chess.cpp  ChessGame.cpp  ConsoleChessPlayer.cpp  ConsoleDisplay.cpp  ConsolePlayer.cpp  ConsolePuzzlePlayer.cpp  Figure.cpp  FigureBishop.cpp  FigureKing.cpp  FigureKnight.cpp  FigurePath.cpp  FigurePawn.cpp  FigureQueen.cpp  FigureRook.cpp  FigureSymbol.cpp  Game.cpp  GameLogic.cpp  IllegalMoveException.cpp  InitialChessBoardSetup.cpp  Move.cpp  NetworkPlayer.cpp  Player.cpp  Position.cpp  PositionFormat.cpp  Puzzle.cpp  PuzzleGame.cpp  PuzzleLogic.cpp  main.cpp  move.pb.cc
